--- a/latihan-git/coba1/index.html
+++ b/latihan-git/coba1/index.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Riki Widiantoro</h1>
 
+    <button>klik</button>
+    
+    <p></p>
+    
     <script src="script.js"></script>
 </body>
 </html>
