--- a/latihan-git/coba1/index.html
+++ b/latihan-git/coba1/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Riki Widiantoro</h1>
+    <h1>Selamat Datang di Website kami!</h1>
+    <h4>klik tombol detail dibawah</h4>
 
-    <button>klik</button>
+    <button>detail</button>
     
-    <p></p>
+    <p>Hallo, nama saya Riki Widiantoro, saya berumur 22 tahun dan saya tinggal di Ponorogo.</p>
     
     <script src="script.js"></script>
 </body>
