--- a/latihan-git/coba1/index.html
+++ b/latihan-git/coba1/index.html
@@ -11,9 +11,10 @@
     <h1>Selamat Datang di Website kami!</h1>
     <h4>klik tombol detail dibawah</h4>
 
-    <button>detail</button>
+    <button class="r">reguler</button>
+    <button class="b">bold</button>
     
-    <p>Hallo, nama saya Riki Widiantoro, saya berumur 22 tahun dan saya tinggal di Ponorogo.</p>
+    <p class="">Hallo, nama saya Riki Widiantoro, saya berumur 22 tahun dan saya tinggal di Ponorogo.</p>
     
     <script src="script.js"></script>
 </body>
