--- a/latihan-git/coba2-branch/mahasiswa.html
+++ b/latihan-git/coba2-branch/mahasiswa.html
@@ -12,6 +12,8 @@
     <ul>
         <li>Riki Widiantoro : 111111</li>
         <li>Eren Yeager : 222222</li>
+        <li>Mikasa Ackerman : 333333</li>
+        <li>Armin Alert : 444444</li>
     </ul>
 </body>
 </html>
