--- a/latihan-git/coba3/index.html
+++ b/latihan-git/coba3/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Halaman Index</h1>
+
+    <ul>
+        <li><a href="mahasiswa.html">halaman mahasiswa</a></li>
+        <li><a href="dosen.html">halaman dosen</a></li>
+        <li><a href="staf.html">halaman staf</a></li>
+    </ul>
 </body>
 </html>
