--- a/latihan-git/coba3/staf.html
+++ b/latihan-git/coba3/staf.html
@@ -7,6 +7,14 @@
     <title>Staf</title>
 </head>
 <body>
-    <h1>Staf</h1>
+    <h1>Halaman Staf</h1>
+    <ul>
+        <li>Saiken (66)</li>
+        <li>Chomei (77)</li>
+        <li>Gyuki (88)</li>
+        <li>Kurama (99)</li>
+        <li>Juubi (100)</li>
+    </ul>
+    <a href="index.html">kembali</a>
 </body>
 </html>
