--- a/latihan-git/coba3/index.html
+++ b/latihan-git/coba3/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>Halaman Index</h1>
+    <h1>Selamat Datang di Home</h1>
 
     <ul>
         <li><a href="mahasiswa.html">halaman mahasiswa</a></li>
