--- a/latihan-git/coba3/mahasiswa.html
+++ b/latihan-git/coba3/mahasiswa.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <h1>Halaman Mahasiswa</h1>
-    <ol>
-        <li>Riki Widiantoro (111111)</li>
-        <li>Eren Yeager (222222)</li>
-        <li>Mikasa Ackerman (333333)</li>
-        <li>Armin Alert (444444)</li>
-    </ol>
+    <div class="kotak">
+        <ol>
+            <li>Riki Widiantoro (111111)</li>
+            <li>Eren Yeager (222222)</li>
+            <li>Mikasa Ackerman (333333)</li>
+            <li>Armin Alert (444444)</li>
+        </ol>
+    </div>
     <a href="index.html">kembali</a>
 </body>
 </html>
