--- a/latihan-git/coba3/index.html
+++ b/latihan-git/coba3/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1>Selamat Datang di Home</h1>
-
-    <ul>
-        <li><a href="mahasiswa.html">halaman mahasiswa</a></li>
-        <li><a href="dosen.html">halaman dosen</a></li>
-        <li><a href="staf.html">halaman staf</a></li>
-    </ul>
+    <div class="kotak">
+        <ul>
+            <li><a href="mahasiswa.html">halaman mahasiswa</a></li>
+            <li><a href="dosen.html">halaman dosen</a></li>
+            <li><a href="staf.html">halaman staf</a></li>
+        </ul>
+    </div>
 </body>
 </html>
