--- a/latihan-git/coba3/staf.html
+++ b/latihan-git/coba3/staf.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <h1>Halaman Staf</h1>
-    <ol>
-        <li>Saiken (66)</li>
-        <li>Chomei (77)</li>
-        <li>Gyuki (88)</li>
-        <li>Kurama (99)</li>
-        <li>Juubi (100)</li>
-    </ol>
+    <div class="kotak">
+        <ol>
+            <li>Saiken (66)</li>
+            <li>Chomei (77)</li>
+            <li>Gyuki (88)</li>
+            <li>Kurama (99)</li>
+            <li>Juubi (100)</li>
+        </ol>
+    </div>
     <a href="index.html">kembali</a>
 </body>
 </html>
