--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero totam dicta ipsum possimus nisi illo earum quaerat illum blanditiis, ad dolorem deserunt! Harum itaque sint neque necessitatibus debitis optio nobis.</p>
 </body>
 </html>
