--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Hello World</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero totam dicta ipsum possimus nisi illo earum quaerat illum blanditiis, ad dolorem deserunt! Harum itaque sint neque necessitatibus debitis optio nobis.</p>
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, quidem!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, dolor!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, libero.</li>
+        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, laudantium!</li>
+    </ul>
 </body>
 </html>
