--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <button>paragraf</button>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero totam dicta ipsum possimus nisi illo earum quaerat illum blanditiis, ad dolorem deserunt! Harum itaque sint neque necessitatibus debitis optio nobis.</p>
+    <button>list</button>
     <ul>
         <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, quidem!</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, dolor!</li>
