menambahkan file script

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <button>paragraf</button>
+    <button class="p">paragraf</button>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero totam dicta ipsum possimus nisi illo earum quaerat illum blanditiis, ad dolorem deserunt! Harum itaque sint neque necessitatibus debitis optio nobis.</p>
-    <button>list</button>
+    <button class="l">list</button>
     <ul>
         <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, quidem!</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, dolor!</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, libero.</li>
         <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, laudantium!</li>
     </ul>
+
+    <script src="script.js"></script>
 </body>
 </html>
