memberi efek pada button paragraf

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello World</h1>
     <button class="p">paragraf</button>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero totam dicta ipsum possimus nisi illo earum quaerat illum blanditiis, ad dolorem deserunt! Harum itaque sint neque necessitatibus debitis optio nobis.</p>
+    <p class="pp"></p>
     <button class="l">list</button>
     <ul>
         <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, quidem!</li>
