menambahkan event pada button list

--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
     <button class="p">paragraf</button>
     <p class="pp"></p>
     <button class="l">list</button>
-    <ul>
-        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, quidem!</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, dolor!</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, libero.</li>
-        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, laudantium!</li>
-    </ul>
+    <ul class="ll"></ul>
 
     <script src="script.js"></script>
 </body>
