--- a/satu/index.html
+++ b/satu/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Halaman Index</h1>
+
+    <ul>
+        <li>Halaman Mahasiswa</li>
+        <li>Halaman Dosen</li>
+        <li>Halaman Staf</li>
+    </ul>
 </body>
 </html>
