--- a/satu/index.html
+++ b/satu/index.html
@@ -10,9 +10,9 @@
     <h1>Halaman Index</h1>
 
     <ul>
-        <li>Halaman Mahasiswa</li>
-        <li>Halaman Dosen</li>
-        <li>Halaman Staf</li>
+        <li><a href="">Halaman Mahasiswa</a></li>
+        <li><a href="">Halaman Dosen</a></li>
+        <li><a href="">Halaman Staf</a></li>
     </ul>
 </body>
 </html>
