--- a/satu/index.html
+++ b/satu/index.html
@@ -10,9 +10,9 @@
     <h1>Halaman Index</h1>
 
     <ul>
-        <li><a href="">Halaman Mahasiswa</a></li>
-        <li><a href="">Halaman Dosen</a></li>
-        <li><a href="">Halaman Staf</a></li>
+        <li><a href="mahasiswa.html">Halaman Mahasiswa</a></li>
+        <li><a href="dosen.html">Halaman Dosen</a></li>
+        <li><a href="staf.html">Halaman Staf</a></li>
     </ul>
 </body>
 </html>
