--- a/satu/index.html
+++ b/satu/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Halaman Index</h1>
+    <h5>Riki Widiantoro</h5>
 
     <ul>
         <li><a href="mahasiswa.html">Halaman Mahasiswa</a></li>
