--- a/latihan-git/index.html
+++ b/latihan-git/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h1>Git & GitHub</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, ab! Saepe aut quod neque voluptas! Eum, enim? Obcaecati sapiente vel consequatur quam earum at. Debitis illo sequi modi ea tempore quia, amet maxime quas magni eos nobis dicta ipsum accusamus esse ab. Temporibus nemo excepturi mollitia, numquam asperiores neque, assumenda eligendi ea quidem adipisci cupiditate aspernatur quis nostrum ullam distinctio repellat quia unde quasi aliquid labore? Praesentium quae veritatis vitae consectetur amet enim similique reiciendis ipsum quo nihil unde earum fugiat cum sequi possimus aperiam, facilis sed cupiditate recusandae autem. Mollitia qui similique nostrum ab! Corrupti voluptatem recusandae eligendi delectus.</p>
 
     <script src="script.js"></script>
 </body>
